force-app/main/default/objects/User/fields/CANAL__c.field-meta.xml
<CustomField>
    <fullName>CANAL__c</fullName>
    <label>CANAL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CALL CENTER</fullName>
            </value>
            <value>
                <fullName>EQUIPE CORPORATIVA</fullName>
            </value>
            <value>
                <fullName>GVEN - CONSULTORES</fullName>
            </value>
            <value>
                <fullName>LOJAS AUTORIZADAS</fullName>
            </value>
            <value>
                <fullName>LOJAS PRÓPRIAS</fullName>
            </value>
            <value>
                <fullName>PROMOTORES</fullName>
            </value>
            <value>
                <fullName>NOVOS NEGOCIOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>