force-app/main/default/objects/User/fields/DataFimFerias__c.field-meta.xml
<CustomField>
    <fullName>DataFimFerias__c</fullName>
    <description>Armazena a data que o colaborador saiu de férias.</description>
    <label>Data Fim das Férias</label>
    <type>Date</type>
</CustomField>