force-app/main/default/objects/User/fields/DataInicioFerias__c.field-meta.xml
<CustomField>
    <fullName>DataInicioFerias__c</fullName>
    <description>Armazena a data que o colaborador iniciará as férias.</description>
    <label>Data de Início das Férias</label>
    <type>Date</type>
</CustomField>