force-app/main/default/objects/User/fields/DistribuicaoVisita__c.field-meta.xml
<CustomField>
    <fullName>DistribuicaoVisita__c</fullName>
    <label>Distribuição de visita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>