force-app/main/default/objects/User/fields/Ferias__c.field-meta.xml
<CustomField>
    <fullName>Ferias__c</fullName>
    <formula>AND(DataInicioFerias__c &lt;= today(), DataFimFerias__c &gt;= today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Férias</label>
    <type>Checkbox</type>
</CustomField>