force-app/main/default/objects/User/fields/FiltroMapaGeo__c.field-meta.xml
<CustomField>
    <fullName>FiltroMapaGeo__c</fullName>
    <inlineHelpText>Último filtro utilizado na tela Mapa Geográfico</inlineHelpText>
    <label>Filtro Mapa Geo</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>