force-app/main/default/objects/User/fields/FiltrosRastreamentoGeo2__c.field-meta.xml
<CustomField>
    <fullName>FiltrosRastreamentoGeo2__c</fullName>
    <inlineHelpText>Histórico de filtros utilizados na tela &quot;Rastreamento Geográfico&quot;</inlineHelpText>
    <label>Filtros Rastreamento Geo 2</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>