force-app/main/default/objects/User/fields/FiltrosRastreamentoGeo__c.field-meta.xml
<CustomField>
    <fullName>FiltrosRastreamentoGeo__c</fullName>
    <inlineHelpText>Histórico dos últimos filtros utilizados na tela &quot;Rastreamento Geográfico&quot;</inlineHelpText>
    <label>Filtros Rastreamento Geo</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>