force-app/main/default/objects/User/fields/Id_do_Papel_do_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Id_do_Papel_do_Supervisor__c</fullName>
    <label>Id do Papel do Supervisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>