force-app/main/default/objects/User/fields/Loja__c.field-meta.xml
<CustomField>
    <fullName>Loja__c</fullName>
    <description>Informa de qual loja o usuário pertence</description>
    <label>Loja</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CANAL__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BH</fullName>
            </value>
            <value>
                <fullName>Betim</fullName>
            </value>
            <value>
                <fullName>Lagoa Santa</fullName>
            </value>
            <value>
                <fullName>Santa Luzia</fullName>
            </value>
            <value>
                <fullName>Pedro Leopoldo</fullName>
            </value>
            <value>
                <fullName>Santa Barbara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>