force-app/main/default/objects/User/fields/User_Log__c.field-meta.xml
<CustomField>
    <fullName>User_Log__c</fullName>
    <label>User Log</label>
    <length>65536</length>
    <type>Html</type>
</CustomField>