force-app/main/default/objects/User/validationRules/ValidaCaracteresTelefone.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaCaracteresTelefone</fullName>
    <active>true</active>
    <description>Valida os dígitos inseridos pelo usuário no campo Telefone.</description>
    <errorConditionFormula>AND
(
OR(
(LEN( Phone) &lt;&gt; 10)
,
NOT((REGEX(Phone , &quot;[0-9]{10}&quot;)))
)
,
NOT(ISBLANK(Phone))
)</errorConditionFormula>
    <errorMessage>Verifique se o Telefone informado Contém 10 dígitos e possui somente Números.</errorMessage>
</ValidationRule>