force-app/main/default/objects/User/listViews/MFA_Users.listView-meta.xml
<ListView>
    <fullName>MFA_Users</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>HAS_TEMP_CODE</columns>
    <columns>HAS_TOTP</columns>
    <columns>HAS_AUTHENTICATOR</columns>
    <columns>HAS_U2F</columns>
    <columns>PHONE_VERIFIED</columns>
    <columns>HAS_USER_VERIFIED_PHONE</columns>
    <columns>HAS_USER_VERIFIED_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HAS_AUTHENTICATOR</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>HAS_U2F</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>HAS_TOTP</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>MFA Users</label>
    <language>en_US</language>
    <sharedTo>
        <group>Grupo_Administra_o_Salesforce</group>
    </sharedTo>
</ListView>